--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jspm-sample.tk",
-  "repository": "djindjic/jspm-sample.tk",
+  "name": "www.vincentbriglia.com",
+  "repository": "vincentbriglia/www.vincentbriglia.com",
   "devDependencies": {
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
@@ -9,7 +9,7 @@
     "gulp-load-plugins": "^0.7.1",
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.8.3",
-    "karma": "^0.12.28",
+    "karma": "^0.12.32",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-firefox-launcher": "^0.1.4",
