--- a/package.json
+++ b/package.json
@@ -30,12 +30,18 @@
       "lib": "www/app"
     },
     "dependencies": {
-      "angular": "github:angular/bower-angular@1.3.x",
-      "angular-material": "github:angular/bower-material@0.8.x",
-      "angular-messages": "github:angular/bower-angular-messages@1.3.x",
-      "angular-mocks": "github:angular/bower-angular-mocks@1.3.x",
-      "css": "github:systemjs/plugin-css@0.1.x",
-      "text": "github:systemjs/plugin-text@0.0.x"
+      "angular": "github:angular/bower-angular@^1.3",
+      "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
+      "angular-material": "github:angular/bower-material@^0.8.0",
+      "angular-messages": "github:angular/bower-angular-messages@^1.3.0",
+      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.0",
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
+      "angular-ui-router-extras": "github:christopherthielen/ui-router-extras@^0.0.13",
+      "css": "github:systemjs/plugin-css@^0.1.0",
+      "lodash/lodash": "github:lodash/lodash@^3.6.0",
+      "restangular": "github:mgonto/restangular@^1.4.0",
+      "systemjs/plugin-text": "github:systemjs/plugin-text@^0.0.1",
+      "text": "github:systemjs/plugin-text@^0.0.1"
     },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
