--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "www.vincentbriglia.com",
   "repository": "vincentbriglia/www.vincentbriglia.com",
   "devDependencies": {
+    "babel": "^4.7.16",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
     "gulp-cachebust": "0.0.3",
@@ -10,8 +11,10 @@
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.8.3",
     "karma": "^0.12.32",
+    "karma-babel-preprocessor": "^4.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jspm": "^1.1.1",
     "karma-mocha": "^0.1.10",
@@ -19,33 +22,57 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sauce-launcher": "^0.2.10",
     "karma-sinon": "^1.0.4",
+    "karma-traceur-preprocessor": "^0.4.0",
     "mocha": "^2.1.0",
     "phantomjs-polyfill": "0.0.1",
     "promise": "^6.0.1",
-    "sinon": "^1.12.2"
+    "sinon": "^1.12.2",
+    "traceur": "0.0.87"
   },
   "jspm": {
     "directories": {
-      "baseURL": "www",
-      "lib": "www/app"
+      "baseURL": "lib",
+      "lib": "lib/app"
     },
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.3",
-      "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
-      "angular-material": "github:angular/bower-material@^0.8.0",
-      "angular-messages": "github:angular/bower-angular-messages@^1.3.0",
-      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.0",
+      "angular": "github:angular/bower-angular@^1.3.15",
+      "angular-material": "github:angular/bower-material@^0.8.3",
+      "angular-messages": "github:angular/bower-angular-messages@^1.3.15",
+      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
       "angular-ui-router-extras": "github:christopherthielen/ui-router-extras@^0.0.13",
-      "css": "github:systemjs/plugin-css@^0.1.0",
+      "css": "github:systemjs/plugin-css@^0.1.9",
+      "lodash": "npm:lodash@^3.6.0",
       "lodash/lodash": "github:lodash/lodash@^3.6.0",
       "restangular": "github:mgonto/restangular@^1.4.0",
-      "systemjs/plugin-text": "github:systemjs/plugin-text@^0.0.1",
-      "text": "github:systemjs/plugin-text@^0.0.1"
+      "text": "github:systemjs/plugin-text@^0.0.2"
     },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
+      "babel-runtime": "npm:babel-runtime@^4.7.16",
+      "chai": "^1.10.0",
+      "gulp": "^3.8.10",
+      "gulp-cachebust": "0.0.3",
+      "gulp-htmlmin": "^1.1.0",
+      "gulp-load-plugins": "^0.7.1",
+      "gulp-uglify": "^1.1.0",
+      "gulp-webserver": "^0.8.3",
+      "karma": "^0.12.32",
+      "karma-chai": "^0.1.0",
+      "karma-chrome-launcher": "^0.1.7",
+      "karma-firefox-launcher": "^0.1.4",
+      "karma-jspm": "^1.1.1",
+      "karma-mocha": "^0.1.10",
+      "karma-mocha-reporter": "^0.2.2",
+      "karma-phantomjs-launcher": "^0.1.4",
+      "karma-sauce-launcher": "^0.2.10",
+      "karma-sinon": "^1.0.4",
+      "mocha": "^2.1.0",
+      "phantomjs-polyfill": "0.0.1",
+      "promise": "^6.0.1",
+      "sinon": "^1.12.2",
+      "traceur": "github:jmcriffey/bower-traceur@0.0.87",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.87"
     }
   }
 }
