--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ script:
 - karma start karma.conf.js --single-run
 - divshot push development -t $DIVSHOT_AUTH
 - protractor --baseUrl='http://development.vincentbriglia.divshot.io/' protractor.conf.js
-- jspm bundle app/bootstrap lib/bundle/$(date +%s | sha256sum | base64 | head -c30;
+- jspm bundle app/bootstrap www/bundle/$(date +%s | sha256sum | base64 | head -c30;
   echo).js --inject --minify
 - gulp build-index
-- rm -rf lib/app
-- rm lib/config.js
+- rm -rf www/app
+- rm www/config.js
 - divshot push staging -t $DIVSHOT_AUTH
 - protractor --baseUrl='http://staging.vincentbriglia.divshot.io/' protractor.conf.js
 after_success:
