let's try this.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "repository": "vincentbriglia/www.vincentbriglia.com",
   "devDependencies": {
     "chai": "^2.2.0",
+    "gulp": "^3.8.11",
     "gulp-cachebust": "0.0.5",
     "gulp-htmlmin": "^1.1.1",
     "gulp-load-plugins": "^0.9.0",
