--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.9.0",
     "karma": "^0.12.31",
-    "karma-babel-preprocessor": "^4.0.1",
+    "karma-babel-preprocessor": "^5.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.2.7",
@@ -22,12 +22,12 @@
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sauce-launcher": "^0.2.10",
-    "mocha": "^2.2.1",
+    "mocha": "^2.2.4",
     "mochai": "^0.2.5",
     "phantomjs-polyfill": "0.0.1",
-    "promise": "^6.1.0",
-    "sinon": "^1.14.1",
-    "semantic-release": "^3.0.4"
+    "promise": "^7.0.0",
+    "semantic-release": "^3.0.4",
+    "sinon": "^1.14.1"
   },
   "jspm": {
     "directories": {
