--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.3.15",
       "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
+      "angular-loading-bar": "github:chieffancypants/angular-loading-bar@^0.7.1",
       "angular-material": "github:angular/bower-material@^0.8.3",
       "angular-messages": "github:angular/bower-angular-messages@^1.3.15",
       "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
@@ -46,14 +47,16 @@
       "json": "github:systemjs/plugin-json@^0.1.0",
       "lodash/lodash": "github:lodash/lodash@^3.6.0",
       "restangular": "github:mgonto/restangular@^1.4.0",
-      "text": "github:systemjs/plugin-text@^0.0.2"
+      "text": "github:systemjs/plugin-text@^0.0.2",
+      "webfont": "github:components/webfontloader@^1.5.2"
     },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
+      "babel-runtime": "npm:babel-runtime@^4.7.16",
+      "core-js": "npm:core-js@^0.8.1"
     }
   },
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.2",
   "scripts": {
     "prepublish": "semantic-release pre",
     "postpublish": "semantic-release post"
