--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ before_script:
 - jspm config registries.github.auth $JSPM_AUTH
 - jspm install
 script:
-- karma start karma.conf.js --single-run
+# - karma start karma.conf.js --single-run
 - divshot push development -t $DIVSHOT_AUTH
-- protractor --baseUrl='http://development.vincentbriglia.divshot.io/' protractor.conf.js
+# - protractor --baseUrl='http://development.vincentbriglia.divshot.io/' protractor.conf.js
 - jspm bundle app/bootstrap www/bundle/$(date +%s | sha256sum | base64 | head -c30;
   echo).js --inject --minify
 - gulp build-index
 - divshot push staging -t $DIVSHOT_AUTH
-- protractor --baseUrl='http://staging.vincentbriglia.divshot.io/' protractor.conf.js
+# - protractor --baseUrl='http://staging.vincentbriglia.divshot.io/' protractor.conf.js
 after_success:
 - rm -rf www/app
 - rm www/config.js
