--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 sudo: false
 node_js:
 - '0.12'
+branches:
+  only:
+    - master
 before_script:
 - npm install -g jspm
 - npm install -g protractor
