--- a/package.json
+++ b/package.json
@@ -36,19 +36,9 @@
     },
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.3.15",
-      "angular-animate": "github:angular/bower-angular-animate@^1.3.15",
-      "angular-loading-bar": "github:chieffancypants/angular-loading-bar@^0.7.1",
       "angular-material": "github:angular/bower-material@^0.8.3",
-      "angular-messages": "github:angular/bower-angular-messages@^1.3.15",
-      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
-      "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
-      "angular-ui-router-extras": "github:christopherthielen/ui-router-extras@^0.0.13",
-      "css": "github:systemjs/plugin-css@^0.1.9",
-      "json": "github:systemjs/plugin-json@^0.1.0",
-      "lodash/lodash": "github:lodash/lodash@^3.6.0",
-      "restangular": "github:mgonto/restangular@^1.4.0",
-      "text": "github:systemjs/plugin-text@^0.0.2",
-      "webfont": "github:components/webfontloader@^1.5.2"
+      "css": "github:systemjs/plugin-css@^0.1.10",
+      "lodash/lodash": "github:lodash/lodash@^3.8.0"
     },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
